--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,29 @@
+---
 language: go
 go:
   - "1.16"
+
+env:
+  matrix:
+    - MAKE_TASK="lintall travis-lint gosec scan-nancy"
+
+matrix:
+  fast_finish: true
+  allow_failures:
+    - go: tip
+
+before_install:
+  - pip --quiet install yamllint
+  - go get github.com/sonatype-nexus-community/nancy
+
+script:
+  - make $MAKE_TASK
+
 cache:
   directories:
     - $HOME/.cache/go-build
     - $HOME/gopath/pkg/mod
+
 jobs:
   include:
     - stage: unit tests
